# Dtag

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  clean.sh  install.sh
debian/: changelog  control  rules
dtag/: aux_type.h  dtag.cc  env.cc  env.h  operation_type.h  tag.h  tag_manager.cc  tag_manager.h
dtag/components/: recent_writer.cc  recent_writer.h  tag_reader.cc  tag_reader.h  tag_writer.cc  tag_writer.h
dtag/env/: concrete_env.cc  concrete_env.h  constant.h  enviroment.h
dtag/operations/: add.cc  add.h  aux_type.h  clear.cc  clear.h  factory.cc  factory.h  help.cc  help.h  latest.h  op_factory.cc  op_factory.h  operation.h  operation_type.h  recent.cc  recent.h  remove.cc  remove.h  search.cc  search.h  show.cc  show.h  type.h
dtag/option/: argument.h  aux_type.h  operation.h  parser.cc  parser.h
dtag/tests/: op_test.cc  tag_reader_test.cc  tag_writer_test.cc
script/: drecent
src/: CMakeLists.txt  dtag.cc  option_parser.h
